--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Five Day Weather Outlook</title>
+    <title>Five Day Outlook</title>
 </head>
 <body>
   <nav class="navbar navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1">Your Weather</span>
+      <span class="navbar-brand mb-0 h1">Your Five Day Weather</span>
       <div class="form-outline">
         <div class="input-group">
           <input type="search" id='city-result' class="form-control rounded" placeholder="City Name" aria-label="Search"
